<?xml version="1.0" encoding="utf-8"?>
<!--
 a. Assignment : #03.
 b. File Name : activity_department.xml (layout/activity_department.xml).
 c. Full name of the student : Mahalavanya Sriram, Chandan Mannem.
 -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/radio_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/radio_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/radio_4" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="@+id/selectButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectButton2" />

    <Button
        android:id="@+id/selectButton2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/select_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>