<?xml version="1.0" encoding="utf-8"?>
<!--
 a. Assignment : #03.
 b. File Name : activity_main.xml (layout/activity_main.xml).
 c. Full name of the student : Mahalavanya Sriram, Chandan Mannem.
 -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:autofillHints="@string/name_hint"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/emailLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <EditText
        android:id="@+id/email"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/email_hint"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/id"
        app:layout_constraintEnd_toEndOf="@+id/emailLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/id_hint"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/deptLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dept_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dept"
        app:layout_constraintEnd_toEndOf="@+id/idLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLabel"
        app:layout_constraintVertical_bias="0.848" />

    <TextView
        android:id="@+id/dept"
        android:layout_width="196dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/selectButton"
        app:layout_constraintEnd_toStartOf="@+id/selectButton"
        app:layout_constraintStart_toEndOf="@+id/idLabel"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>